Slightly fixed spacing for landing page icons.

--- a/views/style.css
+++ b/views/style.css
@@ -153,6 +153,7 @@ h5 {
 .QuickLink div{
   display: inline-block;
   width: 250px;
+  margin-top: 10px;
   vertical-align: top;
   margin-right: 50px;
   color: #444;
